syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;
option java_package = "com.example.grpc";



service DocumentProcessor {
    rpc Process(DocumentRequest) returns (DocumentResponse);
}

message DocumentRequest {
    string document_id = 1;
}

message DocumentResponse {
    string document_id = 1;
    string status = 2;
}
